big 'ol prose and markdown-it plugin upgrade

--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       });
     }
   </script>
-  <script type="module" src="/src/entry.js"></script>
+  <script type="module" src="/src/entry.ts"></script>
 </body>
 </html>
