--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
     }
   </script>
   <script type="module" src="/src/entry.ts"></script>
+  <img class="absolute bottom-[-1px] right-[-1px]" src="https://res.cloudinary.com/duib7ae0a/image/upload/alex-vipond/tracking.png" aria-hidden="true" />
 </body>
 </html>
