feat: Tweak various Baleada Features docs, document a few new Baleada Logic pipes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="manifest" href="/site.webmanifest">
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#58b8e4">
   <meta name="msapplication-TileColor" content="#2b5797">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#daf2fb">
 
   <meta hid="description" name="description" content= "Documentation for Baleada, a toolkit for building web apps." />
   <meta hid="keywords" name="keywords" content= "baleada, documentation, user interface logic, vue composition functions, react hooks, vue components, react components, icons, vite configuration, rollup configuration, webpack configuration" />
